src/index.scss
// @import url('https://fonts.googleapis.com/css2?family=Hahmlet&family=Work+Sans');
// @import url(https://fonts.googleapis.com/css?family=Hahmlet:700|Work+Sans:bold);
@import './components/primitives';
@import './components/reset';
@import './styles/icons.scss';
@import './styles/tailwind.scss';

@layer base {
  @font-face {
    font-family: Inter;
    src: url('/fonts/Inter-Regular.woff2');
  }

  @font-face {
    font-family: Inter;
    font-weight: 600;
    src: url('/fonts/Inter-SemiBold.woff2');
  }

  input[name='hours']::-webkit-inner-spin-button,
  input[name='hours']::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  input[name='total']::-webkit-inner-spin-button,
  input[name='total']::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

pwa-action-sheet {
  position: fixed;
  right: 0;
  bottom: 0;
  width: 100vw;
}

html,
body {
  ::-webkit-scrollbar {
    @media screen and (min-width: 600px) {
      width: 4px;
    }
  }

  ::-webkit-scrollbar-thumb {
    background-color: var(--color-gray-03);
    border-radius: 12px;
  }
}

#root,
.navigation {
  margin-top: env(safe-area-inset-top) !important;
}

#modal-box,
.sidebar {
  padding-top: env(safe-area-inset-top) !important;
}

//shared container for all sign up pages
.form-container {
  width: 360px;
  margin: auto;

  @media (max-width: 640px) {
    width: 100%;
  }
}

